Adjust user group

--- a/tests/integration/targets/v4.1/tasks/netbox_user_group.yml
+++ b/tests/integration/targets/v4.1/tasks/netbox_user_group.yml
@@ -81,7 +81,7 @@
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
       username: TestUser
-      password: TestPassword
+      password: TestPassword2
       groups:
         - Test User Group
     state: present
