--- a/tests/integration/targets/v4.1/tasks/main.yml
+++ b/tests/integration/targets/v4.1/tasks/main.yml
@@ -191,8 +191,14 @@
 - name: NETBOX_PERMISSION TESTS
   ansible.builtin.include_tasks: netbox_permission.yml
 
-- name: NETBOX_TOKEN TESTS
-  ansible.builtin.include_tasks: netbox_token.yml
+- name: NETBOX_TOKEN_TESTS
+  ansible.builtin.include_tasks:
+    file: netbox_token.yml
+    apply:
+      tags:
+        - netbox_token
+  tags:
+    - netbox_token
 
 # Module has to be updated for 3.3
 # - name: "NETBOX_CABLE TESTS"
