--- a/tests/integration/targets/v4.1/tasks/main.yml
+++ b/tests/integration/targets/v4.1/tasks/main.yml
@@ -33,7 +33,13 @@
   ansible.builtin.include_tasks: netbox_tenant_group.yml
 
 - name: NETBOX_RACK TESTS
-  ansible.builtin.include_tasks: netbox_rack.yml
+  ansible.builtin.include_tasks:
+    file: netbox_rack.yml
+    apply:
+      tags:
+        - netbox_rack
+  tags:
+    - netbox_rack
 
 - name: NETBOX_RACK_ROLE TESTS
   ansible.builtin.include_tasks: netbox_rack_role.yml
@@ -84,7 +90,13 @@
   ansible.builtin.include_tasks: netbox_inventory_item.yml
 
 - name: NETBOX_VIRTUAL_MACHINE TESTS
-  ansible.builtin.include_tasks: netbox_virtual_machine.yml
+  ansible.builtin.include_tasks:
+    file: netbox_virtual_machine.yml
+    apply:
+      tags:
+        - netbox_virtual_machine
+  tags:
+    - netbox_virtual_machine
 
 - name: NETBOX_CLUSTER TESTS
   ansible.builtin.include_tasks: netbox_cluster.yml
@@ -158,17 +170,35 @@
 - name: NETBOX_VIRTUAL_CHASSIS TESTS
   ansible.builtin.include_tasks: netbox_virtual_chassis.yml
 
-- name: NETBOX_USER TESTS
-  ansible.builtin.include_tasks: netbox_user.yml
+- name: NETBOX_USER_TESTS
+  ansible.builtin.include_tasks:
+    file: netbox_user.yml
+    apply:
+      tags:
+        - netbox_user
+  tags:
+    - netbox_user
 
-- name: NETBOX_USER_GROUP TESTS
-  ansible.builtin.include_tasks: netbox_user_group.yml
+- name: NETBOX_USER_GROUP_TESTS
+  ansible.builtin.include_tasks:
+    file: netbox_user_group.yml
+    apply:
+      tags:
+        - netbox_user_group
+  tags:
+    - netbox_user_group
 
 - name: NETBOX_PERMISSION TESTS
   ansible.builtin.include_tasks: netbox_permission.yml
 
-- name: NETBOX_TOKEN TESTS
-  ansible.builtin.include_tasks: netbox_token.yml
+- name: NETBOX_TOKEN_TESTS
+  ansible.builtin.include_tasks:
+    file: netbox_token.yml
+    apply:
+      tags:
+        - netbox_token
+  tags:
+    - netbox_token
 
 # Module has to be updated for 3.3
 # - name: "NETBOX_CABLE TESTS"
@@ -337,7 +367,11 @@
     - netbox_config_template
 
 - name: NETBOX_VIRTUAL_DISK
-  ansible.builtin.include_tasks: netbox_virtual_disk.yml
+  ansible.builtin.include_tasks:
+    file: netbox_virtual_disk.yml
+    apply:
+      tags:
+        - netbox_virtual_disk
   tags:
     - netbox_virtual_disk
 
