--- a/changelogs/fragments/1349-add-additional-fhrp-arguments.yaml
+++ b/changelogs/fragments/1349-add-additional-fhrp-arguments.yaml
@@ -1,3 +1,2 @@
 minor_changes:
-  - in netbox_fhrp_group added ip_address and ip_status options
-  - in netbox_ip_address added fhrpgroup options
+  - in netbox_ip_address added assigned_object_type and assigned_object_id options
