Add no-root to poetry

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,7 +103,7 @@ jobs:
           virtualenvs-create: false
 
       - name: Install Python packages
-        run: poetry install
+        run: poetry install --no-root
 
       - name: Build and install collection
         run: |
