Adjust coverage version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.13"
 ansible-core = "^2.18"
 black = "*"
 codecov = "*"
-coverage = "*"
+coverage = "7.6.1"
 deepdiff = "*"
 cryptography = "*"
 jinja2 = "*"
