--- a/changelogs/fragments/scope_prefix_cluster.yml
+++ b/changelogs/fragments/scope_prefix_cluster.yml
@@ -1,3 +1,3 @@
-changes:
+minor_changes:
   - netbox_prefix - Add options scope and scope_type for NetBox 4.2+
   - netbox_cluster - Add options scope and scope_type for NetBox 4.2+
