--- a/tests/integration/targets/v4.2/tasks/main.yml
+++ b/tests/integration/targets/v4.2/tasks/main.yml
@@ -1,36 +1,102 @@
 ---
 - name: NETBOX_DEVICE TESTS
-  ansible.builtin.include_tasks: netbox_device.yml
+  ansible.builtin.include_tasks:
+    file: netbox_device.yml
+    apply:
+      tags:
+        - netbox_device
+  tags:
+    - netbox_device
 
 - name: NETBOX_DEVICE_INTERFACE TESTS
-  ansible.builtin.include_tasks: netbox_device_interface.yml
+  ansible.builtin.include_tasks:
+    file: netbox_device_interface.yml
+    apply:
+      tags:
+        - netbox_device_interface
+  tags:
+    - netbox_device_interface
 
 - name: NETBOX_DEVICE_INTERFACE_TEMPLATE TESTS
-  ansible.builtin.include_tasks: netbox_device_interface_template.yml
+  ansible.builtin.include_tasks:
+    file: netbox_device_interface_template.yml
+    apply:
+      tags:
+        - netbox_device_interface_template
+  tags:
+    - netbox_device_interface_template
 
 - name: NETBOX_IP_ADDRESS TESTS
-  ansible.builtin.include_tasks: netbox_ip_address.yml
+  ansible.builtin.include_tasks:
+    file: netbox_ip_address.yml
+    apply:
+      tags:
+        - netbox_ip_address
+  tags:
+    - netbox_ip_address
 
 - name: NETBOX_PREFIX TESTS
-  ansible.builtin.include_tasks: netbox_prefix.yml
+  ansible.builtin.include_tasks:
+    file: netbox_prefix.yml
+    apply:
+      tags:
+        - netbox_prefix
+  tags:
+    - netbox_prefix
 
 - name: NETBOX_SITE TESTS
-  ansible.builtin.include_tasks: netbox_site.yml
+  ansible.builtin.include_tasks:
+    file: netbox_site.yml
+    apply:
+      tags:
+        - netbox_site
+  tags:
+    - netbox_site
 
 - name: NETBOX_SITE_GROUP TESTS
-  ansible.builtin.include_tasks: netbox_site_group.yml
+  ansible.builtin.include_tasks:
+    file: netbox_site_group.yml
+    apply:
+      tags:
+        - netbox_site_group
+  tags:
+    - netbox_site_group
 
 - name: NETBOX_CONTACT TESTS
-  ansible.builtin.include_tasks: netbox_contact.yml
+  ansible.builtin.include_tasks:
+    file: netbox_contact.yml
+    apply:
+      tags:
+        - netbox_contact
+  tags:
+    - netbox_contact
 
 - name: NETBOX_CONTACT_ROLE TESTS
-  ansible.builtin.include_tasks: netbox_contact_role.yml
+  ansible.builtin.include_tasks:
+    file: netbox_contact_role.yml
+    apply:
+      tags:
+        - netbox_contact_role
+  tags:
+    - netbox_contact_role
 
 - name: NETBOX_TENTANT TESTS
-  ansible.builtin.include_tasks: netbox_tenant.yml
+  ansible.builtin.include_tasks:
+    file: netbox_tenant.yml
+    apply:
+      tags:
+        - netbox_tenant
+  tags:
+    - netbox_tenant
 
 - name: NETBOX_TENTANT_GROUP TESTS
-  ansible.builtin.include_tasks: netbox_tenant_group.yml
+  ansible.builtin.include_tasks:
+    file: netbox_tenant_group.yml
+    apply:
+      tags:
+        - netbox_tenant_group
+  tags:
+    - netbox_tenant_group
 
 - name: NETBOX_RACK TESTS
   ansible.builtin.include_tasks:
@@ -42,52 +108,148 @@
     - netbox_rack
 
 - name: NETBOX_RACK_ROLE TESTS
-  ansible.builtin.include_tasks: netbox_rack_role.yml
+  ansible.builtin.include_tasks:
+    file: netbox_rack_role.yml
+    apply:
+      tags:
+        - netbox_rack_role
+  tags:
+    - netbox_rack_role
 
 - name: NETBOX_LOCATION TESTS
-  ansible.builtin.include_tasks: netbox_location.yml
+  ansible.builtin.include_tasks:
+    file: netbox_location.yml
+    apply:
+      tags:
+        - netbox_location
+  tags:
+    - netbox_location
 
 - name: NETBOX_MANUFACTURER TESTS
-  ansible.builtin.include_tasks: netbox_manufacturer.yml
+  ansible.builtin.include_tasks:
+    file: netbox_manufacturer.yml
+    apply:
+      tags:
+        - netbox_manufacturer
+  tags:
+    - netbox_manufacturer
 
 - name: NETBOX_PLATFORM TESTS
-  ansible.builtin.include_tasks: netbox_platform.yml
+  ansible.builtin.include_tasks:
+    file: netbox_platform.yml
+    apply:
+      tags:
+        - netbox_platform
+  tags:
+    - netbox_platform
 
 - name: NETBOX_DEVICE_TYPE TESTS
-  ansible.builtin.include_tasks: netbox_device_type.yml
+  ansible.builtin.include_tasks:
+    file: netbox_device_type.yml
+    apply:
+      tags:
+        - netbox_device_type
+  tags:
+    - netbox_device_type
 
 - name: NETBOX_DEVICE_ROLE TESTS
-  ansible.builtin.include_tasks: netbox_device_role.yml
+  ansible.builtin.include_tasks:
+    file: netbox_device_role.yml
+    apply:
+      tags:
+        - netbox_device_role
+  tags:
+    - netbox_device_role
 
 - name: NETBOX_IPAM_ROLE TESTS
-  ansible.builtin.include_tasks: netbox_ipam_role.yml
+  ansible.builtin.include_tasks:
+    file: netbox_ipam_role.yml
+    apply:
+      tags:
+        - netbox_ipam_role
+  tags:
+    - netbox_ipam_role
 
 - name: NETBOX_VLAN_GROUP TESTS
-  ansible.builtin.include_tasks: netbox_vlan_group.yml
+  ansible.builtin.include_tasks:
+    file: netbox_vlan_group.yml
+    apply:
+      tags:
+        - netbox_vlan_group
+  tags:
+    - netbox_vlan_group
 
 - name: NETBOX_VLAN TESTS
-  ansible.builtin.include_tasks: netbox_vlan.yml
+  ansible.builtin.include_tasks:
+    file: netbox_vlan.yml
+    apply:
+      tags:
+        - netbox_vlan
+  tags:
+    - netbox_vlan
 
 - name: NETBOX_VRF TESTS
-  ansible.builtin.include_tasks: netbox_vrf.yml
+  ansible.builtin.include_tasks:
+    file: netbox_vrf.yml
+    apply:
+      tags:
+        - netbox_vrf
+  tags:
+    - netbox_vrf
 
 - name: NETBOX_RIR TESTS
-  ansible.builtin.include_tasks: netbox_rir.yml
+  ansible.builtin.include_tasks:
+    file: netbox_rir.yml
+    apply:
+      tags:
+        - netbox_rir
+  tags:
+    - netbox_rir
 
 - name: NETBOX_AGGREGATE TESTS
-  ansible.builtin.include_tasks: netbox_aggregate.yml
+  ansible.builtin.include_tasks:
+    file: netbox_aggregate.yml
+    apply:
+      tags:
+        - netbox_aggregate
+  tags:
+    - netbox_aggregate
 
 - name: NETBOX_REGION TESTS
-  ansible.builtin.include_tasks: netbox_region.yml
+  ansible.builtin.include_tasks:
+    file: netbox_region.yml
+    apply:
+      tags:
+        - netbox_region
+  tags:
+    - netbox_region
 
 - name: NETBOX_DEVICE_BAY TESTS
-  ansible.builtin.include_tasks: netbox_device_bay.yml
+  ansible.builtin.include_tasks:
+    file: netbox_device_bay.yml
+    apply:
+      tags:
+        - netbox_device_bay
+  tags:
+    - netbox_device_bay
 
 - name: NETBOX_DEVICE_BAY_TEMPLATE TESTS
-  ansible.builtin.include_tasks: netbox_device_bay_template.yml
+  ansible.builtin.include_tasks:
+    file: netbox_device_bay_template.yml
+    apply:
+      tags:
+        - netbox_device_bay_template
+  tags:
+    - netbox_device_bay_template
 
 - name: NETBOX_INVENTORY_ITEM TESTS
-  ansible.builtin.include_tasks: netbox_inventory_item.yml
+  ansible.builtin.include_tasks:
+    file: netbox_inventory_item.yml
+    apply:
+      tags:
+        - netbox_inventory_item
+  tags:
+    - netbox_inventory_item
 
 - name: NETBOX_VIRTUAL_MACHINE TESTS
   ansible.builtin.include_tasks:
@@ -99,76 +261,220 @@
     - netbox_virtual_machine
 
 - name: NETBOX_CLUSTER TESTS
-  ansible.builtin.include_tasks: netbox_cluster.yml
+  ansible.builtin.include_tasks:
+    file: netbox_cluster.yml
+    apply:
+      tags:
+        - netbox_cluster
+  tags:
+    - netbox_cluster
 
 - name: NETBOX_CLUSTER_GROUP TESTS
-  ansible.builtin.include_tasks: netbox_cluster_group.yml
+  ansible.builtin.include_tasks:
+    file: netbox_cluster_group.yml
+    apply:
+      tags:
+        - netbox_cluster_group
+  tags:
+    - netbox_cluster_group
 
 - name: NETBOX_CLUSTER_TYPE TESTS
-  ansible.builtin.include_tasks: netbox_cluster_type.yml
+  ansible.builtin.include_tasks:
+    file: netbox_cluster_type.yml
+    apply:
+      tags:
+        - netbox_cluster_type
+  tags:
+    - netbox_cluster_type
 
 - name: NETBOX_VM_INTERFACE TESTS
-  ansible.builtin.include_tasks: netbox_vm_interface.yml
+  ansible.builtin.include_tasks:
+    file: netbox_vm_interface.yml
+    apply:
+      tags:
+        - netbox_vm_interface
+  tags:
+    - netbox_vm_interface
 
 - name: NETBOX_PROVIDER TESTS
-  ansible.builtin.include_tasks: netbox_provider.yml
+  ansible.builtin.include_tasks:
+    file: netbox_provider.yml
+    apply:
+      tags:
+        - netbox_provider
+  tags:
+    - netbox_provider
 
 - name: NETBOX_PROVIDER_NETWORK TESTS
-  ansible.builtin.include_tasks: netbox_provider_network.yml
+  ansible.builtin.include_tasks:
+    file: netbox_provider_network.yml
+    apply:
+      tags:
+        - netbox_provider_network
+  tags:
+    - netbox_provider_network
 
 - name: NETBOX_CIRCUIT_TYPE TESTS
-  ansible.builtin.include_tasks: netbox_circuit_type.yml
+  ansible.builtin.include_tasks:
+    file: netbox_circuit_type.yml
+    apply:
+      tags:
+        - netbox_circuit_type
+  tags:
+    - netbox_circuit_type
 
 - name: NETBOX_CIRCUIT TESTS
-  ansible.builtin.include_tasks: netbox_circuit.yml
+  ansible.builtin.include_tasks:
+    file: netbox_circuit.yml
+    apply:
+      tags:
+        - netbox_circuit
+  tags:
+    - netbox_circuit
 
 - name: NETBOX_CIRCUIT_TERMINATION TESTS
-  ansible.builtin.include_tasks: netbox_circuit_termination.yml
+  ansible.builtin.include_tasks:
+    file: netbox_circuit_termination.yml
+    apply:
+      tags:
+        - netbox_circuit_termination
+  tags:
+    - netbox_circuit_termination
 
 - name: NETBOX_REAR_PORT TESTS
-  ansible.builtin.include_tasks: netbox_rear_port.yml
+  ansible.builtin.include_tasks:
+    file: netbox_rear_port.yml
+    apply:
+      tags:
+        - netbox_rear_port
+  tags:
+    - netbox_rear_port
 
 - name: NETBOX_REAR_PORT_TEMPLATE TESTS
-  ansible.builtin.include_tasks: netbox_rear_port_template.yml
+  ansible.builtin.include_tasks:
+    file: netbox_rear_port_template.yml
+    apply:
+      tags:
+        - netbox_rear_port_template
+  tags:
+    - netbox_rear_port_template
 
 - name: NETBOX_FRONT_PORT TESTS
-  ansible.builtin.include_tasks: netbox_front_port.yml
+  ansible.builtin.include_tasks:
+    file: netbox_front_port.yml
+    apply:
+      tags:
+        - netbox_front_port
+  tags:
+    - netbox_front_port
 
 - name: NETBOX_FRONT_PORT_TEMPLATE TESTS
-  ansible.builtin.include_tasks: netbox_front_port_template.yml
+  ansible.builtin.include_tasks:
+    file: netbox_front_port_template.yml
+    apply:
+      tags:
+        - netbox_front_port_template
+  tags:
+    - netbox_front_port_template
 
 - name: NETBOX_CONSOLE_PORT TESTS
-  ansible.builtin.include_tasks: netbox_console_port.yml
+  ansible.builtin.include_tasks:
+    file: netbox_console_port.yml
+    apply:
+      tags:
+        - netbox_console_port
+  tags:
+    - netbox_console_port
 
 - name: NETBOX_CONSOLE_PORT_TEMPLATE TESTS
-  ansible.builtin.include_tasks: netbox_console_port_template.yml
+  ansible.builtin.include_tasks:
+    file: netbox_console_port_template.yml
+    apply:
+      tags:
+        - netbox_console_port_template
+  tags:
+    - netbox_console_port_template
 
 - name: NETBOX_CONSOLE_SERVER_PORT TESTS
-  ansible.builtin.include_tasks: netbox_console_server_port.yml
+  ansible.builtin.include_tasks:
+    file: netbox_console_server_port.yml
+    apply:
+      tags:
+        - netbox_console_server_port
+  tags:
+    - netbox_console_server_port
 
 - name: NETBOX_CONSOLE_SERVER_PORT_TEMPLATE TESTS
-  ansible.builtin.include_tasks: netbox_console_server_port_template.yml
+  ansible.builtin.include_tasks:
+    file: netbox_console_server_port_template.yml
+    apply:
+      tags:
+        - netbox_console_server_port_template
+  tags:
+    - netbox_console_server_port_template
 
 - name: NETBOX_POWER_PANEL TESTS
-  ansible.builtin.include_tasks: netbox_power_panel.yml
+  ansible.builtin.include_tasks:
+    file: netbox_power_panel.yml
+    apply:
+      tags:
+        - netbox_power_panel
+  tags:
+    - netbox_power_panel
 
 - name: NETBOX_POWER_FEED TESTS
-  ansible.builtin.include_tasks: netbox_power_feed.yml
+  ansible.builtin.include_tasks:
+    file: netbox_power_feed.yml
+    apply:
+      tags:
+        - netbox_power_feed
+  tags:
+    - netbox_power_feed
 
 - name: NETBOX_POWER_PORT TESTS
-  ansible.builtin.include_tasks: netbox_power_port.yml
+  ansible.builtin.include_tasks:
+    file: netbox_power_port.yml
+    apply:
+      tags:
+        - netbox_power_port
+  tags:
+    - netbox_power_port
 
 - name: NETBOX_POWER_PORT_TEMPLATE TESTS
-  ansible.builtin.include_tasks: netbox_power_port_template.yml
+  ansible.builtin.include_tasks:
+    file: netbox_power_port_template.yml
+    apply:
+      tags:
+        - netbox_power_port_template
+  tags:
+    - netbox_power_port_template
 
 - name: NETBOX_POWER_OUTLET TESTS
-  ansible.builtin.include_tasks: netbox_power_outlet.yml
+  ansible.builtin.include_tasks:
+    file: netbox_power_outlet.yml
+    apply:
+      tags:
+        - netbox_power_outlet
+  tags:
+    - netbox_power_outlet
 
 - name: NETBOX_POWER_OUTLET_TEMPLATE TESTS
-  ansible.builtin.include_tasks: netbox_power_outlet_template.yml
+  ansible.builtin.include_tasks:
+    file: netbox_power_outlet_template.yml
+    apply:
+      tags:
+        - netbox_power_outlet_template
+  tags:
+    - netbox_power_outlet_template
 
 - name: NETBOX_VIRTUAL_CHASSIS TESTS
-  ansible.builtin.include_tasks: netbox_virtual_chassis.yml
+  ansible.builtin.include_tasks:
+    file: netbox_virtual_chassis.yml
+    apply:
+      tags:
+        - netbox_virtual_chassis
+  tags:
+    - netbox_virtual_chassis
 
 - name: NETBOX_USER_TESTS
   ansible.builtin.include_tasks:
@@ -189,7 +495,13 @@
     - netbox_user_group
 
 - name: NETBOX_PERMISSION TESTS
-  ansible.builtin.include_tasks: netbox_permission.yml
+  ansible.builtin.include_tasks:
+    file: netbox_permission.yml
+    apply:
+      tags:
+        - netbox_permission
+  tags:
+    - netbox_permission
 
 - name: NETBOX_TOKEN_TESTS
   ansible.builtin.include_tasks:
@@ -205,10 +517,22 @@
 #  include_tasks: "netbox_cable.yml"
 
 - name: NETBOX_SERVICE TESTS
-  ansible.builtin.include_tasks: netbox_service.yml
+  ansible.builtin.include_tasks:
+    file: netbox_service.yml
+    apply:
+      tags:
+        - netbox_service
+  tags:
+    - netbox_service
 
 - name: NETBOX_LOOKUP TESTS
-  ansible.builtin.include_tasks: netbox_lookup.yml
+  ansible.builtin.include_tasks:
+    file: netbox_lookup.yml
+    apply:
+      tags:
+        - netbox_lookup
+  tags:
+    - netbox_lookup
 
 - name: NETBOX_TAG_TESTS
   ansible.builtin.include_tasks:
@@ -338,10 +662,22 @@
     - netbox_service_template
 
 - name: NETBOX_ASN TESTS
-  ansible.builtin.include_tasks: netbox_asn.yml
+  ansible.builtin.include_tasks:
+    file: netbox_asn.yml
+    apply:
+      tags:
+        - netbox_asn
+  tags:
+    - netbox_asn
 
 - name: NETBOX_FHRP_GROUP TESTS
-  ansible.builtin.include_tasks: netbox_fhrp_group.yml
+  ansible.builtin.include_tasks:
+    file: netbox_fhrp_group.yml
+    apply:
+      tags:
+        - netbox_fhrp_group
+  tags:
+    - netbox_fhrp_group
 
 - name: NETBOX_JOURNAL_ENTRY TESTS
   ansible.builtin.include_tasks:
@@ -362,7 +698,11 @@
     - netbox_fhrp_group_assignmen
 
 - name: NETBOX_CONFIG_TEMPLATE
-  ansible.builtin.include_tasks: netbox_config_template.yml
+  ansible.builtin.include_tasks:
+    file: netbox_config_template.yml
+    apply:
+      tags:
+        - netbox_config_template
   tags:
     - netbox_config_template
 
