--- a/tests/integration/targets/v4.2/tasks/netbox_device_interface.yml
+++ b/tests/integration/targets/v4.2/tasks/netbox_device_interface.yml
@@ -310,3 +310,23 @@
       - test_twelve['interface']['name'] == "GigabitEthernet5"
       - test_twelve['interface']['device'] == 1
       - test_twelve['interface']['mark_connected'] == true
+
+- name: "13 - Update interface primary MAC address"
+  netbox.netbox.netbox_device_interface:
+    netbox_url: http://localhost:32768
+    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    data:
+      device: test100
+      name: GigabitEthernet2
+      primary_mac_address: "AA:AB:CC:DD:EE:FF"
+    state: present
+  register: test_thirteen
+
+- name: "13 - ASSERT"
+  ansible.builtin.assert:
+    that:
+      - test_thirteen is changed
+      - test_thirteen['msg'] == "interface GigabitEthernet2 updated"
+      - test_thirteen['interface']['name'] == "GigabitEthernet2"
+      - test_thirteen['interface']['device'] == 1
+      - test_thirteen['interface']['primary_mac_address'] == 2
