--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -10,6 +10,7 @@ plugin_routing:
 
 action_groups:
   netbox:
+    - netbox_config_template
     - netbox_aggregate
     - netbox_asn
     - netbox_cable
