--- a/changelogs/fragments/1437-fix-sevral-bug-discovered-by-integration-tests.yml
+++ b/changelogs/fragments/1437-fix-sevral-bug-discovered-by-integration-tests.yml
@@ -1,2 +1,3 @@
 bugfixes:
   - Add netbox version check to support service creation for netbox version prior of 4.3
+  - Use dedicated function to check netbox version istead of self.full_version for rack.
