--- a/tests/integration/targets/v4.2/tasks/netbox_circuit_termination.yml
+++ b/tests/integration/targets/v4.2/tasks/netbox_circuit_termination.yml
@@ -43,7 +43,7 @@
       - test_one['diff']['before']['state'] == "absent"
       - test_one['diff']['after']['state'] == "present"
       - test_one['circuit_termination']['termination_type'] == "circuits.providernetwork"
-      - test_one['circuit_termination']['termination_id'] == "2"
+      - test_one['circuit_termination']['termination_id'] == 2
       - test_one['circuit_termination']['circuit'] == 1
       - test_one['circuit_termination']['term_side'] == "A"
       - test_one['circuit_termination']['port_speed'] == 10000
@@ -107,7 +107,7 @@
       circuit: Test Circuit
       term_side: Z
       termination_id: 2
-      termination_type: circuits.providernetwork 
+      termination_type: circuits.providernetwork
       port_speed: 10000
     state: present
   register: test_four
@@ -119,7 +119,7 @@
       - test_four['diff']['before']['state'] == "absent"
       - test_four['diff']['after']['state'] == "present"
       - test_one['circuit_termination']['termination_type'] == "circuits.providernetwork"
-      - test_one['circuit_termination']['termination_id'] == "2"
+      - test_one['circuit_termination']['termination_id'] == 2
       - test_four['circuit_termination']['circuit'] == 1
       - test_four['circuit_termination']['term_side'] == "Z"
       - test_four['circuit_termination']['port_speed'] == 10000
@@ -147,5 +147,5 @@
       - test_five['circuit_termination']['pp_info'] == "PP10-24"
       - test_five['circuit_termination']['description'] == "Test description"
       - test_one['circuit_termination']['termination_type'] == "circuits.providernetwork"
-      - test_one['circuit_termination']['termination_id'] == "2"
+      - test_one['circuit_termination']['termination_id'] == 2
       - test_five['msg'] == "circuit_termination test_circuit_a deleted"
