--- a/tests/integration/targets/v4.3/tasks/netbox_circuit_termination.yml
+++ b/tests/integration/targets/v4.3/tasks/netbox_circuit_termination.yml
@@ -4,6 +4,25 @@
 ### NETBOX_CIRCUIT_TERMINATION
 ##
 ##
+- name: "NETBOX_CIRCUIT_TERMINATION 0: Create provider network within NetBox with only required information"
+  netbox.netbox.netbox_provider_network:
+    netbox_url: http://localhost:32768
+    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    data:
+      provider: Test Provider
+      name: Test Provider Network One
+    state: present
+  register: test_one
+
+- name: "NETBOX_CIRCUIT_TERMINATION 0: ASSERT - Necessary info creation"
+  ansible.builtin.assert:
+    that:
+      - test_one is changed
+      - test_one['diff']['before']['state'] == "absent"
+      - test_one['diff']['after']['state'] == "present"
+      - test_one['provider_network']['name'] == "Test Provider Network One"
+      - test_one['msg'] == "provider_network Test Provider Network One created"
+
 - name: "NETBOX_CIRCUIT_TERMINATION 1: Create provider within NetBox with only required information"
   netbox.netbox.netbox_circuit_termination:
     netbox_url: http://localhost:32768
@@ -11,7 +30,8 @@
     data:
       circuit: Test Circuit
       term_side: A
-      site: Test Site
+      termination_id: 2
+      termination_type: circuits.providernetwork
       port_speed: 10000
     state: present
   register: test_one
@@ -22,9 +42,10 @@
       - test_one is changed
       - test_one['diff']['before']['state'] == "absent"
       - test_one['diff']['after']['state'] == "present"
+      - test_one['circuit_termination']['termination_type'] == "circuits.providernetwork"
+      - test_one['circuit_termination']['termination_id'] == 2
       - test_one['circuit_termination']['circuit'] == 1
       - test_one['circuit_termination']['term_side'] == "A"
-      - test_one['circuit_termination']['site'] == 1
       - test_one['circuit_termination']['port_speed'] == 10000
       - test_one['msg'] == "circuit_termination test_circuit_a created"
 
@@ -42,9 +63,10 @@
   ansible.builtin.assert:
     that:
       - not test_two['changed']
+      - test_one['circuit_termination']['termination_type'] == "circuits.providernetwork"
+      - test_one['circuit_termination']['termination_id'] == 2
       - test_two['circuit_termination']['circuit'] == 1
       - test_two['circuit_termination']['term_side'] == "A"
-      - test_two['circuit_termination']['site'] == 1
       - test_two['circuit_termination']['port_speed'] == 10000
       - test_two['msg'] == "circuit_termination test_circuit_a already exists"
 
@@ -66,13 +88,14 @@
   ansible.builtin.assert:
     that:
       - test_three is changed
+      - test_one['circuit_termination']['termination_type'] == "circuits.providernetwork"
+      - test_one['circuit_termination']['termination_id'] == 2
       - test_three['diff']['after']['upstream_speed'] == 1000
       - test_three['diff']['after']['xconnect_id'] == "10X100"
       - test_three['diff']['after']['pp_info'] == "PP10-24"
       - test_three['diff']['after']['description'] == "Test description"
       - test_three['circuit_termination']['circuit'] == 1
       - test_three['circuit_termination']['term_side'] == "A"
-      - test_three['circuit_termination']['site'] == 1
       - test_three['circuit_termination']['port_speed'] == 10000
       - test_three['circuit_termination']['upstream_speed'] == 1000
       - test_three['circuit_termination']['xconnect_id'] == "10X100"
@@ -87,7 +110,8 @@
     data:
       circuit: Test Circuit
       term_side: Z
-      site: Test Site
+      termination_id: 2
+      termination_type: circuits.providernetwork
       port_speed: 10000
     state: present
   register: test_four
@@ -98,9 +122,10 @@
       - test_four is changed
       - test_four['diff']['before']['state'] == "absent"
       - test_four['diff']['after']['state'] == "present"
+      - test_one['circuit_termination']['termination_type'] == "circuits.providernetwork"
+      - test_one['circuit_termination']['termination_id'] == 2
       - test_four['circuit_termination']['circuit'] == 1
       - test_four['circuit_termination']['term_side'] == "Z"
-      - test_four['circuit_termination']['site'] == 1
       - test_four['circuit_termination']['port_speed'] == 10000
       - test_four['msg'] == "circuit_termination test_circuit_z created"
 
@@ -120,10 +145,11 @@
       - test_five is changed
       - test_five['circuit_termination']['circuit'] == 1
       - test_five['circuit_termination']['term_side'] == "A"
-      - test_five['circuit_termination']['site'] == 1
       - test_five['circuit_termination']['port_speed'] == 10000
       - test_five['circuit_termination']['upstream_speed'] == 1000
       - test_five['circuit_termination']['xconnect_id'] == "10X100"
       - test_five['circuit_termination']['pp_info'] == "PP10-24"
       - test_five['circuit_termination']['description'] == "Test description"
+      - test_one['circuit_termination']['termination_type'] == "circuits.providernetwork"
+      - test_one['circuit_termination']['termination_id'] == 2
       - test_five['msg'] == "circuit_termination test_circuit_a deleted"
